--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SportsStore.Domain.Entities
-@model IEnumerable<Product>
+@model SportsStore.WebUI.Models.ProductsListViewModel
 
 @{
     ViewBag.Title = "Products";
@@ -7,13 +7,16 @@
 
 <h2>List</h2>
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
   <div>
     <h3>@p.Name</h3>
     @p.Description
-    <h4>@p.Price.ToString("c")</h4> @* ToString("c") reners numerical values as currency according to the culture settings of the server *@
-    
+    <h4>@p.Price.ToString("c")</h4> @* ToString("c") reners numerical values as currency according to the culture settings of the server *@    
   </div>
 }
+
+<div>
+  @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x}))
+</div>
 
