--- a/SportsStore.WebUI/Content/CustomContent/CustomStyle.css
+++ b/SportsStore.WebUI/Content/CustomContent/CustomStyle.css
@@ -1,13 +1,29 @@
+.zoom-background-hover, .thumbnail:hover {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
+}
+
 * {
-  font-family: "font-family: 'Ubuntu', sans-serif"; }
+  font-family: "font-family: 'Ubuntu', sans-serif";
+}
 
 h1, h2, h3, h4 {
-  font-family: "font-family: 'Ubuntu', sans-serif"; }
+  font-family: "font-family: 'Ubuntu', sans-serif";
+}
 
 body {
-  background-color: #ffebcd; }
+  background-color: #ffebcd;
+}
 
 .navbar-inverse .navbar-brand {
-  color: #ffebcd; }
+  color: #ffebcd;
+}
+
+.thumbnail h1, .thumbnail h2, .thumbnail h3, .thumbnail h4 {
+  margin: 0;
+}
+.thumbnail p {
+  margin: 0;
+}
 
 /*# sourceMappingURL=CustomStyle.css.map */
