--- a/SportsStore.WebUI/Content/CustomContent/CustomStyle.scss
+++ b/SportsStore.WebUI/Content/CustomContent/CustomStyle.scss
@@ -1,4 +1,5 @@
 ﻿@import "variables.scss";
+@import "functions.scss";
 
 *{
   font-family: $font-primary;
@@ -13,8 +14,24 @@ body {
 }
 
 .navbar-inverse {
+
   .navbar-brand {
     color: $color-primary;
+  }
+}
+
+.thumbnail {
+
+  h1, h2, h3, h4 {
+    margin: 0;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  &:hover {
+    @extend .zoom-background-hover;     
   }
 }
  
