--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -7,15 +7,26 @@
 
 <h2>List</h2>
 
-@foreach (var p in Model.Products)
-{
-  <div>    
-    <h3>@p.Name</h3>
-    <img src="@Url.Action("GetImage", "Product", new { p.ProductID })"/>   
-    @p.Description
-    <h4>@p.Price.ToString("c")</h4> @* ToString("c") reners numerical values as currency according to the culture settings of the server *@    
-  </div>
-}
+<div class="row">
+
+  @foreach (var p in Model.Products)
+  {
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="@Url.Action("GetImage", "Product", new { p.ProductID })" alt="@p.Name" height="280"/>
+          <div class="caption">
+            <h3>@p.Name</h3>
+            <p>@p.Description</p>
+            <h4>@p.Price.ToString("c")</h4> @* ToString("c") reners numerical values as currency according to the culture settings of the server *@
+          </div>
+        </div>
+      </div>
+  }
+</div>
+
+
+
+
 
 <div>
   @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x}))
