--- a/SportsStore.WebUI/Content/CustomContent/CustomStyle.css
+++ b/SportsStore.WebUI/Content/CustomContent/CustomStyle.css
@@ -22,8 +22,9 @@ body {
 .thumbnail h1, .thumbnail h2, .thumbnail h3, .thumbnail h4 {
   margin: 0;
 }
-.thumbnail p {
-  margin: 0;
+.thumbnail a {
+  display: block;
+  text-align: center;
 }
 
 /*# sourceMappingURL=CustomStyle.css.map */
