--- a/SportsStore.WebUI/Content/CustomContent/CustomStyle.scss
+++ b/SportsStore.WebUI/Content/CustomContent/CustomStyle.scss
@@ -22,16 +22,19 @@ body {
 
 .thumbnail {
 
-  h1, h2, h3, h4 {
-    margin: 0;
-  }
+    h1, h2, h3, h4 {
+        margin: 0;
+    }
 
-  p {
-    margin: 0;
-  }
+    a {
+        display: block;
+        text-align: center; 
+    }
 
-  &:hover {
-    @extend .zoom-background-hover;     
-  }
+    
+
+    &:hover {
+        @extend .zoom-background-hover;
+    }
 }
  
