--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -13,12 +13,14 @@
   {
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-          <img src="@Url.Action("GetImage", "Product", new { p.ProductID })" alt="@p.Name" height="280"/>
-          <div class="caption">
-            <h3>@p.Name</h3>
-            <p>@p.Description</p>
-            <h4>@p.Price.ToString("c")</h4> @* ToString("c") reners numerical values as currency according to the culture settings of the server *@
-          </div>
+            <a href=# class="text-center">
+                <img class="text-center" src="@Url.Action("GetImage", "Product", new { p.ProductID })" alt="@p.Name" height="280" />
+                <div class="caption text-left">
+                    <h3>@p.Name</h3>
+                    <p>@p.Description</p>
+                    <h4>@p.Price.ToString("c")</h4> @* ToString("c") reners numerical values as currency according to the culture settings of the server *@
+                </div>
+            </a>
         </div>
       </div>
   }
