deleted bs classes and references

--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -5,39 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - SportsStore</title>
     <link rel="icon" type="image/x-icon" href="@Url.Content("/favicon.ico")" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/CustomContent/CustomStyle.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+    <div class="" role="navigation">
+        <div class="">
+            <div class="">
+                <button type="button" class="" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class=""></span>
+                    <span class=""></span>
+                    <span class=""></span>
                 </button>
                 @Html.ActionLink("SportsStore", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
+            <div class="">
+                <ul class=""></ul>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div id="categories" class="col-xs-3">
+    <div class="">
+        <div id="categories" class="">
             Put something useful here
         </div>
-        <div class="col-xs-8">
+        <div class="">
             @RenderBody()
         </div>
     </div>
-    <footer class="footer">
-        <div class="container">
+    <footer class="">
+        <div class="">
             <p>Footer</p>
         </div>
     </footer>
