added variables for screen sizes

--- a/SportsStore.WebUI/Content/Css/Sass/0-variables/variables.scss
+++ b/SportsStore.WebUI/Content/Css/Sass/0-variables/variables.scss
@@ -1,3 +1,20 @@
 ﻿$font-primary: "font-family: 'Ubuntu', sans-serif";
 
+/*------------------------------------*\
+  #COLORS
+\*------------------------------------*/
+
 $color-primary: #ffebcd;
+
+
+
+
+
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+
+$ss-u-mq-small: 480px;
+$ss-u-mq-medium: 768px;
+$ss-u-mq-large: 992px;
+$ss-u-mq-x-large: 1200px;
