--- a/SportsStore.WebUI/Content/Css/main.css
+++ b/SportsStore.WebUI/Content/Css/main.css
@@ -1,3 +1,8 @@
-
+/*------------------------------------*\
+  #COLORS
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
 
 /*# sourceMappingURL=main.css.map */
