At least here I can use single quote

--- a/SportsStore.WebUI/Content/Css/Sass/1-mixins/mixins-media-queries.scss
+++ b/SportsStore.WebUI/Content/Css/Sass/1-mixins/mixins-media-queries.scss
@@ -1,4 +1,4 @@
-﻿@import "../0-variables/variables";
+﻿@import '../0-variables/variables';
 
 /*------------------------------------*\
   #SCREEN-SIZES
