--- a/SportsStore.WebUI/Content/Css/Sass/2-layout/layout.scss
+++ b/SportsStore.WebUI/Content/Css/Sass/2-layout/layout.scss
@@ -1,4 +1,4 @@
-﻿@import "../0-variables/variables";
+﻿@import '../0-variables/variables';
 
 /*------------------------------------*\
   #LAYOUT
@@ -11,6 +11,5 @@
 
   * {
       grid-column: col-start / span 12;
-      background-color: black;
   }
 }
