starting working on css

--- a/SportsStore.WebUI/Content/Css/Sass/5-components/header.scss
+++ b/SportsStore.WebUI/Content/Css/Sass/5-components/header.scss
@@ -8,6 +8,8 @@
     /*------------------------------------*\
       #COMMON
     \*------------------------------------*/
+    background-color: $color-primary;
+
     .ss-o-nav__wrap {
         display: flex;
         justify-content: space-between;
