--- a/SportsStore.WebUI/Content/Css/main.css
+++ b/SportsStore.WebUI/Content/Css/main.css
@@ -4,5 +4,96 @@
 /*------------------------------------*\
   #SCREEN-SIZES
 \*------------------------------------*/
+/*------------------------------------*\
+  #COLORS
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+.zoom-background-hover {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
+}
+
+/*------------------------------------*\
+  #COLORS
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+/*------------------------------------*\
+  #LAYOUT
+\*------------------------------------*/
+.ss-l-wrapper {
+  display: flex;
+  background-color: #fff;
+}
+
+/*------------------------------------*\
+  #COLORS
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+/*------------------------------------*\
+  #HEADER
+\*------------------------------------*/
+.ss-c-header {
+  /*------------------------------------*\
+    #COMMON
+  \*------------------------------------*/
+  background-color: #182e49;
+}
+.ss-c-header .ss-o-nav__wrap {
+  display: flex;
+  justify-content: space-between;
+  /*------------------------------------*\
+     #DESKTOP
+  \*------------------------------------*/
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .ss-c-header .ss-o-nav__wrap {
+    flex-direction: column;
+  }
+}
+
+/*------------------------------------*\
+  #COLORS
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+/*------------------------------------*\
+  #SCREEN-SIZES
+\*------------------------------------*/
+/*------------------------------------*\
+  #SIDEBAR
+\*------------------------------------*/
+.ss-c-sidebar {
+  /*------------------------------------*\
+      #MOBILE
+  \*------------------------------------*/
+  /*------------------------------------*\
+      #MEDIUM
+  \*------------------------------------*/
+}
+@media (min-width: 480px) and (max-width: 767px) {
+  .ss-c-sidebar {
+    grid-column: col-start / span 3;
+    grid-row: 3;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .ss-c-sidebar {
+    grid-column: col-start 11 / span 2;
+    grid-row: 2;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
