--- a/SportsStore.WebUI/Content/Css/Sass/0-variables/variables.scss
+++ b/SportsStore.WebUI/Content/Css/Sass/0-variables/variables.scss
@@ -4,16 +4,13 @@
   #COLORS
 \*------------------------------------*/
 
-$color-primary: #ffebcd;
-
-
-
-
+$color-primary: #182e49;
+$color-secondary: #fff;
+$color-tertiary: #f2f2f2;
 
 /*------------------------------------*\
   #SCREEN-SIZES
 \*------------------------------------*/
-
 $ss-u-mq-small: 480px;
 $ss-u-mq-medium: 768px;
 $ss-u-mq-large: 992px;
