--- a/SportsStore.WebUI/Content/Css/Sass/2-layout/layout.scss
+++ b/SportsStore.WebUI/Content/Css/Sass/2-layout/layout.scss
@@ -5,11 +5,6 @@
 \*------------------------------------*/
 
 .ss-l-wrapper {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(12, [col-start] 1fr);
-
-  * {
-      grid-column: col-start / span 12;
-  }
+  display: flex;
+  background-color: $color-secondary;
 }
